--- a/dex.html
+++ b/dex.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <link href="login.css" rel="stylesheet">
 </head>
 <body>
     <div class="login">
@@ -12,7 +11,7 @@
         <form>
             <input type="text" placeholder="Usuário" class="text" required><br><br>
             <input type="password" placeholder="Senha" class="text" required><br><br>
-            <button type="button" onclick="alert('Erro ao Entrar')">Entrar</button>
+            <button type="button" onclick="alert('Foi feito sem Biblioteca')">Entrar</button>
         </form>
     </div>
 </body>
